--- a/HRview/Base.lproj/LaunchScreen.storyboard
+++ b/HRview/Base.lproj/LaunchScreen.storyboard
@@ -21,21 +21,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="m1" translatesAutoresizingMaskIntoConstraints="NO" id="1wZ-cS-AC3">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="1uV-ZO-GtL">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="1uV-ZO-GtL">
                                 <rect key="frame" x="75" y="273" width="224" height="121"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="1wZ-cS-AC3" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="CEB-Lr-t9M"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="1wZ-cS-AC3" secondAttribute="bottom" id="Dti-oq-obY"/>
-                            <constraint firstItem="1wZ-cS-AC3" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="HKa-o9-uKz"/>
-                            <constraint firstAttribute="trailing" secondItem="1wZ-cS-AC3" secondAttribute="trailing" id="thc-66-L4C"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -44,7 +35,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="425" height="156"/>
-        <image name="m1" width="1196" height="795"/>
+        <image name="icon" width="811" height="427"/>
     </resources>
 </document>
