--- a/HRview/Base.lproj/Main.storyboard
+++ b/HRview/Base.lproj/Main.storyboard
@@ -184,7 +184,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eHz-Xt-P32" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-763.768115942029" y="-1114.4021739130435"/>
+            <point key="canvasLocation" x="-714.49275362318849" y="-1120.9239130434783"/>
         </scene>
         <!--Create AccountVC-->
         <scene sceneID="SrW-qm-3qB">
@@ -671,7 +671,7 @@
                                         <rect key="frame" x="0.0" y="28" width="414" height="123"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YbK-Zp-dJY" id="iyF-Jz-iE5">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="123"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="122"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hr2" translatesAutoresizingMaskIntoConstraints="NO" id="3lZ-fL-95r" customClass="StyleImage" customModule="HomeRoomApp" customModuleProvider="target">
@@ -831,7 +831,7 @@
                                         <rect key="frame" x="0.0" y="28" width="414" height="123"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bS1-6a-nPi" id="IE8-9N-EB6">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="123"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="122"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hr2" translatesAutoresizingMaskIntoConstraints="NO" id="F3E-ci-Dod" customClass="StyleImage" customModule="HomeRoomApp" customModuleProvider="target">
@@ -1040,21 +1040,46 @@
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tXK-6h-Eyr">
+                                        <rect key="frame" x="20" y="26" width="42" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="42" id="cJK-DQ-JiQ"/>
+                                            <constraint firstAttribute="height" constant="42" id="efo-0M-XNr"/>
+                                        </constraints>
+                                        <state key="normal" image="logout"/>
+                                        <connections>
+                                            <action selector="signOutTapped:" destination="QK4-S1-ISY" eventType="touchUpInside" id="bDJ-vD-dXE"/>
+                                            <segue destination="sAq-Ee-jcP" kind="show" identifier="goToSignIn" id="66M-vI-TbW"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e3o-Wq-W5n">
+                                        <rect key="frame" x="349" y="26" width="27" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="27" id="NMk-PL-5cX"/>
+                                            <constraint firstAttribute="height" constant="42" id="kAe-kN-dNE"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstItem="zuI-H4-wqH" firstAttribute="top" secondItem="g8F-IJ-9tS" secondAttribute="bottom" constant="7" id="1lQ-kX-UK3"/>
                                     <constraint firstAttribute="bottom" secondItem="StP-hl-Qa8" secondAttribute="bottom" id="5D8-Ng-I9i"/>
                                     <constraint firstItem="GdB-P9-QM1" firstAttribute="leading" secondItem="qpT-Vb-xNt" secondAttribute="leading" constant="20" id="92z-Gl-kT9"/>
                                     <constraint firstAttribute="trailing" secondItem="GdB-P9-QM1" secondAttribute="trailing" constant="20" id="FH0-cM-tVv"/>
                                     <constraint firstItem="StP-hl-Qa8" firstAttribute="leading" secondItem="qpT-Vb-xNt" secondAttribute="leading" id="GTW-OZ-cSc"/>
+                                    <constraint firstAttribute="trailing" secondItem="e3o-Wq-W5n" secondAttribute="trailing" constant="38" id="Hxv-5R-rQy"/>
+                                    <constraint firstItem="g8F-IJ-9tS" firstAttribute="leading" secondItem="tXK-6h-Eyr" secondAttribute="trailing" constant="30" id="OuA-HE-tzy"/>
                                     <constraint firstAttribute="trailing" secondItem="StP-hl-Qa8" secondAttribute="trailing" id="Pv7-Ca-YaN"/>
                                     <constraint firstItem="zuI-H4-wqH" firstAttribute="leading" secondItem="qpT-Vb-xNt" secondAttribute="leading" constant="20" id="QOe-Ka-4Do"/>
                                     <constraint firstAttribute="trailing" secondItem="zuI-H4-wqH" secondAttribute="trailing" constant="20" id="QTB-br-biO"/>
                                     <constraint firstItem="g8F-IJ-9tS" firstAttribute="centerX" secondItem="qpT-Vb-xNt" secondAttribute="centerX" id="SUR-Pf-dJn"/>
                                     <constraint firstAttribute="bottom" secondItem="GdB-P9-QM1" secondAttribute="bottom" id="bnF-Vr-cRz"/>
                                     <constraint firstItem="StP-hl-Qa8" firstAttribute="top" secondItem="qpT-Vb-xNt" secondAttribute="top" id="c7M-LK-mLt"/>
+                                    <constraint firstItem="tXK-6h-Eyr" firstAttribute="centerY" secondItem="g8F-IJ-9tS" secondAttribute="centerY" id="fsI-oH-EbM"/>
                                     <constraint firstItem="g8F-IJ-9tS" firstAttribute="top" secondItem="qpT-Vb-xNt" secondAttribute="top" constant="8" id="hCo-Ub-wxp"/>
+                                    <constraint firstItem="e3o-Wq-W5n" firstAttribute="top" secondItem="qpT-Vb-xNt" secondAttribute="top" constant="26" id="qpn-X5-l2J"/>
                                     <constraint firstItem="GdB-P9-QM1" firstAttribute="top" secondItem="zuI-H4-wqH" secondAttribute="bottom" constant="2" id="xPO-pe-SpC"/>
                                 </constraints>
                             </view>
@@ -1074,28 +1099,8 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MZl-y1-1ux" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="LNc-NW-Hgu">
-                    <rect key="frame" x="0.0" y="0.0" width="364" height="60"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GhY-P3-jHJ">
-                            <rect key="frame" x="0.0" y="0.0" width="52" height="60"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="52" id="sB3-gY-bVS"/>
-                            </constraints>
-                            <state key="normal" image="points"/>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have 187 Homeroom Points, play a Quiz to earn more Points and get free Oreos or Brownies in your next purchase." textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xty-4j-3Zh" customClass="StyleLabel" customModule="HomeRoomApp" customModuleProvider="target">
-                            <rect key="frame" x="62" y="0.0" width="302" height="60"/>
-                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="12"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="60" id="2hs-Uv-SPF"/>
-                    </constraints>
-                </stackView>
             </objects>
-            <point key="canvasLocation" x="-30.434782608695656" y="-1114.4021739130435"/>
+            <point key="canvasLocation" x="-13.043478260869566" y="-1114.4021739130435"/>
         </scene>
         <!--FeedbackVC-->
         <scene sceneID="EnV-iq-cYa">
@@ -1113,7 +1118,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send Feedback" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ava-Fq-mxv">
-                                        <rect key="frame" x="51.666666666666657" y="15" width="311" height="30"/>
+                                        <rect key="frame" x="52" y="15" width="311" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="QS8-Nq-Z0Q"/>
                                             <constraint firstAttribute="width" constant="311" id="v5x-Yv-knR"/>
@@ -1145,7 +1150,7 @@
                                 <rect key="frame" x="20" y="68" width="374" height="648"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m2m-km-swm" customClass="StyleButton" customModule="HomeRoomApp" customModuleProvider="target">
-                                        <rect key="frame" x="165.66666666666666" y="525" width="42" height="39"/>
+                                        <rect key="frame" x="166" y="525" width="42" height="39"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="39" id="SG3-d4-m2Q"/>
                                             <constraint firstAttribute="width" constant="42" id="ZgA-zk-Q3n"/>
@@ -1175,7 +1180,7 @@
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="6g9-zb-ouA">
-                                        <rect key="frame" x="126.66666666666667" y="0.0" width="121.00000000000001" height="62"/>
+                                        <rect key="frame" x="127" y="0.0" width="121" height="62"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="121" id="CGz-4b-2zV"/>
                                             <constraint firstAttribute="height" constant="62" id="Oa1-GA-gSe"/>
@@ -1275,6 +1280,7 @@
         <image name="instagram" width="64" height="64"/>
         <image name="like" width="64" height="64"/>
         <image name="logo" width="425" height="156"/>
+        <image name="logout" width="64" height="64"/>
         <image name="navigation" width="64" height="64"/>
         <image name="points" width="64" height="64"/>
         <image name="twitter" width="64" height="64"/>
